--- a/com.personal.book.library/src/main/resources/application.properties
+++ b/com.personal.book.library/src/main/resources/application.properties
@@ -12,9 +12,18 @@ hibernate.connection.characterEncoding=UTF-8
 hibernate.show_sql=true
 hibernate.format_sql=true
 
-
 # Mongodb Conf
 mongodb.url = 127.0.0.1
 mongodb.databasename = book_draft
 mongodb.port = 27017
 mongo.base.package = com.personal.book.library
+
+#Kafka Conf (192.168.99.100 is Docker-Machine Ip)
+kafka.bootstrap.address=127.0.0.1:9092
+mail.topic.name=book_insertion_mail
+consumer.group.name=mail
+
+#Email Conf
+from.email=yourgmail@gmail.com
+to.emails=yourgmail@gmail.com
+email.password=yourpassword
