Spring Redis Session support added, docker-compose changed and some code refactoring!
Change-Id: I026e148a057bea1744e5017b9128513c71b0dc74

--- a/com.personal.book.library/src/test/resources/application.properties
+++ b/com.personal.book.library/src/test/resources/application.properties
@@ -18,6 +18,10 @@ mongodb.databasename = book_draft_test
 mongodb.port = 27017
 mongo.base.package = com.personal.book.library
 
+#Redis Conf
+redis.host=localhost
+redis.port=6379
+
 #Kafka Conf (192.168.99.100 is Docker-Machine Ip)
 kafka.bootstrap.address=127.0.0.1:9092
 mail.topic.name=book_insertion_mail
