--- a/com.personal.book.library/docker_compose_app_kafka.yml
+++ b/com.personal.book.library/docker_compose_app_kafka.yml
@@ -1,5 +1,27 @@
 version: '2'
 services:
+
+  mysql:
+    image: mysql:latest
+    ports: 
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    volumes: 
+      - ~/mysql_data:/var/lib/mysql
+
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - ~/mongodb_data:/data/db mongo
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
   zookeeper:
     image: wurstmeister/zookeeper
     ports:
