--- a/com.personal.book.library/pom.xml
+++ b/com.personal.book.library/pom.xml
@@ -19,7 +19,7 @@
 	</properties>
 
 	<dependencies>
-		
+
 		<!-- Spring dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -35,15 +35,25 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+		</dependency>
 		
 		<dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
 		<dependency>
@@ -57,7 +67,7 @@
 			</exclusions>
 		</dependency>
 		<!-- Spring dependencies -->
-		
+
 		<!-- Other dependencies -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -94,21 +104,21 @@
 			<version>1.5.5</version>
 		</dependency>
 		<!-- Other dependencies -->
-		
+
 		<!-- Testing dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<!-- Testing dependencies -->
-		
+
 	</dependencies>
 
 	<repositories>
