--- a/com.personal.book.library/src/main/resources/application.properties
+++ b/com.personal.book.library/src/main/resources/application.properties
@@ -31,3 +31,7 @@ consumer.group.name=mail
 from.email=yourgmail@gmail.com
 to.emails=yourgmail@gmail.com
 email.password=yourpassword
+
+# Google Captcha v3
+google.captcha.site.key=6LcB4XgUAAAAAHIwxZZcBp4Uzg68G1qQYgGhqlut
+google.captcha.secret.key=6LcB4XgUAAAAAN-6H8Lsz-u5ZbVX57Kbj5QZiYcC
