--- a/com.personal.book.library/src/test/resources/application.properties
+++ b/com.personal.book.library/src/test/resources/application.properties
@@ -31,3 +31,7 @@ consumer.group.name=mail
 from.email=yourgmail@gmail.com
 to.emails=yourgmail@gmail.com
 email.password=yourpassword
+
+# Google Captcha v3
+google.captcha.site.key=PUT_YOUR_KEY
+google.captcha.secret.key=PUT_YOUR_KEY
