Multi factor authentication module development!
Change-Id: I29a3f94bbbb31b69c121babda3f2dcddc3b66219

--- a/com.personal.book.library/pom.xml
+++ b/com.personal.book.library/pom.xml
@@ -103,6 +103,13 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.5.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+
 		<!-- Other dependencies -->
 
 		<!-- Testing dependencies -->
